
CollaborationInfrastructure-1.3:
- Changed initialization of collaboration client and server objects to
  accept a Configuration object, with methods to change important
  settings.

CollaborationInfrastructure-1.4:
- Fixed multi-party communication protocol in Agora plug-in.
- Cleaned up status and warning messages from all components.
- Applied buffer size configuration options to PCM hardware devices for
  improved underrun / overrun recovery.
- Added collaboration client vislet to integrate collaboration
  facilities into otherwise unaware Vrui applications.

CollaborationInfrastructure-1.5:
- Bumped Vrui version requirement to Vrui-2.1-001.

CollaborationInfrastructure-2.0:
- Bumped Vrui version requirement to Vrui-2.2-001.
- Added Cheria protocol plug-in to share input devices and pointing
  tools.
- Removed input device sharing from base collaboration protocol.
- Entirely rebased to new IO::File abstraction infrastructure.
- Changed build system to follow Vrui's new modular build system.

CollaborationInfrastructure-2.1:
- Bumped Vrui version requirement to Vrui-2.2-003.
- Fixed handling of client following / facing in collaboration client.
- Improved Agora module:
  - Reduced bandwidth by not streaming redundant data.
  - Allowed "default" video device in configuration section.

CollaborationInfrastructure-2.2:
- Bumped Vrui version requirement to Vrui-2.4-001.

CollaborationInfrastructure-2.3:
- Bumped Vrui version requirement to Vrui-2.5-001.
- Fixed several cluster-related issues in base collaboration protocol
  and protocol plug-ins.
- Made minor changes to build system in line with Vrui.

CollaborationInfrastructure-2.4:
- Bumped Vrui version requirement to Vrui-2.6-001.
- Adapted collaboration client vislet to new vislet initialization
  procedure.

CollaborationInfrastructure-2.5:
- Fixed installation path for make configuration file if INSTALLPREFIX
  is specified. Pointed out by Braden Pellett.
- Bumped Vrui version requirement to Vrui-2.7-001.