@@ -1,5 +1,5 @@
 ========================================================================
-README for Collaboration Infrastructure version 2.5
+README for Collaboration Infrastructure version 2.6
 Copyright (c) 2008-2013 Oliver Kreylos
 ========================================================================
 
@@ -34,7 +34,7 @@ Science Foundation.
 Requirements
 ============
 
-The Collaboration Infrastructure requires Vrui version 2.7 build 001 or
+The Collaboration Infrastructure requires Vrui version 3.0 build 001 or
 newer. To support audio and 2D video transmission, libspeex and
 libtheora have to be installed.
 
@@ -58,8 +58,8 @@ instructions need to be changed.
 2. Change into the Collaboration Infrastructure base directory:
    > cd CollaborationInfrastructure-<version>
 
-3. If the Vrui version installed in step 0 was not 2.7, or Vrui's
-   installation directory was changed from the default of ~/Vrui-2.7,
+3. If the Vrui version installed in step 0 was not 3.0, or Vrui's
+   installation directory was changed from the default of ~/Vrui-3.0,
    adapt the makefile using a text editor. Change the value of
    VRUI_MAKEDIR close to the beginning of the file as follows:
    VRUI_MAKEDIR := <Vrui install dir>/share/make
